<resources>
    <string name="app_name">Password Helper</string>

    <string name="menu_text">Main Menu</string>
    <string name="btn_generate">Generate!</string>
    <string name="btn_options">Options</string>
    <string name="btn_my_passwords">My Passwords</string>
    <string name="btn_quit">Quit</string>

    <string name="title_activity_generate">Generate a Password</string>
    <string name="generated_text">Password Generated:</string>
    <string name="save_prompt">Do you want to save it?</string>
    <string name="save_text">Save</string>
    <string name="discard_text">Try Again</string>

    <string name="title_activity_options">Options</string>

    <string name="title_activity_password">My Passwords</string>

    <string name="enter_password_name">This is a password for:</string>
    <string name="password_name_hint">Password Name</string>
    <string name="cancel_text">Cancel</string>
    <string name="success_generate_text">A new password has been generated successfully</string>
    <string name="save_success">Saved</string>
    <string name="duplicate_password">Save failed: this password has already been saved</string>
    <string name="duplicate_key">Save failed: the name has already been used. Please change it</string>
    <string name="no_passwords">There is no saved passwords</string>
    <string name="delete_text">Delete</string>
    <string name="delete_confirm">Are you sure you want to delete this password?</string>
    <string name="number_of_char">Length of Password</string>
    <string name="include_numbers">Include Numbers</string>
    <string name="include_lowercase">Include Lowercase Letters</string>
    <string name="include_uppercase">Include Uppercase Letters</string>
    <string name="include_char">Include Following Symbols:</string>
    <string name="symbol_text">Symbols</string>
    <string name="ok_text">OK</string>
    <string name="error_text">Error</string>
    <string name="error_select_one_option">Please select at least one of "Include Numbers", "Include Lowercase Letters" or "Include Uppercase Letters"</string>
    <string name="error_only_symbols">Please only enter symbols in the "Include Following Symbols" textbox</string>
</resources>
