<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context=".MainMenuActivity"
              android:background="@color/activity_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_text"
        android:textSize="@dimen/title_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/button_text_size"
            android:text="@string/btn_generate"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_pressed_color"
            android:layout_weight="1"
            android:onClick="generateClick"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/button_text_size"
            android:text="@string/btn_options"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_pressed_color"
            android:layout_weight="1"
            android:onClick="optionsClick"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/button_text_size"
            android:text="@string/btn_my_passwords"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_pressed_color"
            android:layout_weight="1"
            android:onClick="passwordsClick"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/button_text_size"
            android:text="@string/btn_quit"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_pressed_color"
            android:layout_weight="1"
            android:onClick="quitClick"/>
    </LinearLayout>
</LinearLayout>
