<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:background="@color/activity_background"
                tools:context="com.compactpasswordgenerator.OptionsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_char"
                android:textSize="@dimen/button_text_size"
                android:textColor="@color/black"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seek_number_char"
                android:layout_marginLeft="@dimen/linear_layout_margin"
                android:layout_marginRight="@dimen/linear_layout_margin"
                android:max="26"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/options_margin"
                android:textSize="@dimen/button_text_size"
                android:text="@string/include_numbers"
                android:id="@+id/include_numbers"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/options_margin"
                android:text="@string/include_lowercase"
                android:textSize="@dimen/button_text_size"
                android:id="@+id/include_lowercase"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/options_margin"
                android:text="@string/include_uppercase"
                android:textSize="@dimen/button_text_size"
                android:id="@+id/include_uppercase"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/options_margin"
                android:text="@string/include_char"
                android:textSize="@dimen/button_text_size"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/linear_layout_margin"
                android:layout_marginRight="@dimen/linear_layout_margin"
                android:hint="@string/symbol_text"
                android:id="@+id/include_chars"
                android:textSize="@dimen/button_text_size"
                android:layout_marginTop="@dimen/button_margin"
                android:inputType="textShortMessage"
                android:maxLines="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/linear_layout_margin"
                android:layout_marginRight="@dimen/linear_layout_margin"
                android:background="@drawable/button_pressed_color"
                android:text="@string/save_text"
                android:textSize="@dimen/button_text_size"
                android:onClick="saveOptions"
                android:layout_marginTop="@dimen/options_margin"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
