<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:gravity="center"
              android:background="@color/activity_background"
                tools:context="com.compactpasswordgenerator.GenerateActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generated_text"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"
        android:id="@+id/tv_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/prompt_size"
        android:text="@string/save_prompt"
        android:layout_marginTop="@dimen/seperator"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/linear_layout_margin"
        android:layout_marginRight="@dimen/linear_layout_margin"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save_text"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_pressed_color"
            android:onClick="saveClick"
            android:textSize="@dimen/button_text_size"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/discard_text"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_pressed_color"
            android:onClick="discardClick"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>
</LinearLayout>
